--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -1,32 +1,49 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>The Dicer</title>
-        <style type="text/css">
-            body {
-                margin: 40px auto;
-                max-width: 650px;
-                line-height: 1.6;
-                font-size: 18px;
-                color: #444;
-                padding: 0 10px;
-            }
-
-            h1,
-            h2,
-            h3 {
-                line-height: 1.2;
-            }
-        </style>
-    </head>
-
-    <body>
-        <header>
-            <h1>The Dicer</h1>
-            <aside>
-                <a href=<%= @url %>>Invite URL</a>
-            </aside>
-        </header>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dicer.md</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+  </head>
+  <body id="preview">
+    <h1>Dicer</h1>
+    <p>
+      Dicer is a Discord bot that rolls dices with crazy math expressions. It
+      uses the Dentaku gem, converting dice calls to numbers before evaluation.
+    </p>
+    <p>
+      You can add to your discord server by following the invite url
+      <a href=<%= @url %>>here</a>.
+    </p>
+    <h2>Usage</h2>
+    <p>You can perform basic rolls this way:</p>
+    <pre>
+      <code>
+        !roll 2d20 + 10
+      </code>
+      <code>
+        Dicer: (8 + 12) + 10 = 30
+      </code>
+    </pre>
+    <p>
+      You can also introduce some nifty functions. For example, to emulate a
+      roll with advantage:
+    </p>
+    <pre>
+      <code>
+        !roll MAX(1d20, 1d20)
+      </code>
+      <code>
+        Dicer: MAX(10, 12) = 12
+      </code>
+    </pre>
+    <p>
+      Check the
+      <a href="https://github.com/rubysolo/dentaku">Dentaku gem</a> for more cool
+      things you can do with this bot.
+    </p>
+    <p>You can also delete all the commands made by users and the responses of the bot by running</p>
+    <pre>!clear</pre>
+  </body>
 </html>
