--- a/src/views/index.erb
+++ b/src/views/index.erb
@@ -45,5 +45,6 @@
     </p>
     <p>You can also delete all the commands made by users and the responses of the bot by running</p>
     <pre>!clear</pre>
+    <p>If you have command conflicts with another bot you can prefix every call with the bot name, like <pre><code>!dicer</code></pre>
   </body>
 </html>
