--- a/src/webserver/views/index.erb
+++ b/src/webserver/views/index.erb
@@ -6,7 +6,8 @@
     <title>Dicer.md</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
-  <body id="preview">
+  <body>
+    <script>0</script>
     <h1>Dicer</h1>
     <p>
       Dicer is a Discord bot that rolls dices with crazy math expressions. It
