Update front page example

--- a/src/webserver/views/index.erb
+++ b/src/webserver/views/index.erb
@@ -46,6 +46,6 @@
     </p>
     <p>You can also delete all the commands made by users and the responses of the bot by running</p>
     <pre>!clear</pre>
-    <p>If you have command conflicts with another bot you can prefix every call with the bot name, like <pre><code>!dicer</code></pre>
+    <p>If you have command conflicts with another bot you can prefix every call with the bot name, like <pre><code>!dicer clear</code></pre>
   </body>
 </html>
